# sim2022

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  format-check.yml  loc.yml  perf.yml
ci/: Dockerfile  requirements.txt  riscv_toolchain.7z
cmake/: clang_format.cmake  comp_flags.cmake
docs/: CMakeLists.txt
include/common/: common.hh  counters.hh  inst.hh  state.hh  timer.hh
include/decoder/: decoder.hh
include/elfloader/: elfloader.hh
include/executor/: executor.hh
include/hart/: hart.hh
include/instruction/: instruction.hh
include/memory/: memory.hh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cc
src/decoder/: CMakeLists.txt  decoder.cc  decoder.py
src/elfloader/: CMakeLists.txt  elfloader.cc
src/executor/: CMakeLists.txt  executor.cc
src/hart/: CMakeLists.txt  hart.cc
src/instruction/: instruction.cc
src/memory/: CMakeLists.txt  memory.cc
test/e2e/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  my-lit.py
test/e2e/simulator/: 8-queens.c  8-queens.c.disable  fact.c
test/unit/: CMakeLists.txt  test_footer.hh  test_header.hh
test/unit/decoder/: CMakeLists.txt  bits.cc  decode.cc
test/unit/elfloader/: CMakeLists.txt  elfloader.cc
test/unit/example_test/: CMakeLists.txt  example.cc
test/unit/executor/: CMakeLists.txt  CSR.cc  M.cc  RV32I.cc  executor_test.hh
test/unit/memory/: CMakeLists.txt  memory.test.cc
tools/: CMakeLists.txt  cosim.py
tools/simulator/: CMakeLists.txt  main.cc
